--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.claragoncalves.peps">
 
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,7 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.activities.AddActivity" />
-        <activity android:name=".view.activities.DetailActivity"></activity>
+        <activity android:name=".view.activities.DetailActivity" />
+        <activity android:name=".view.activities.ContactActivity"></activity>
     </application>
 
 </manifest>
